Bug fix for layout issue

--- a/components/Property/PropertyLayout/PropertyLayout.module.css
+++ b/components/Property/PropertyLayout/PropertyLayout.module.css
@@ -74,6 +74,9 @@
 }
 
 @media (max-width: 1260px) {
+    .propertyResultWrap {
+        max-width: 1077px;
+    }
     .searchResultWrap{
         margin-right: 23px;
     }
